--- a/TODO
+++ b/TODO
@@ -1,19 +1,7 @@
 # TODO
 
-Clean up our code.
-Schedule the script to run.
-Deploy the slack bot with mirageOS.
-Interaction with bot
-     - skipping matches.
-        - slackbot interface
-        - store the information (of who is to be skipped) in the database.
-    - skip talking to some people
-Add Cmdliner so that the script can switch between test and real case.
-Add `.opam` file so that installing slack_bot becomes easier.
-Add logging instead of Printf statements.
-
-## NEW TODO
-
-- Rewrite irmin_unix to irmin git
-- Have git interactions inside the code rather than a script
-- Implement a scheduler (with sleeping); duration
+- new feature: write a private message to each matched couple/triple proposing a time for their chat
+- use upstream `httpaf` (it's released now) instead of "vendoring" it into http_mirage_client.{ml,mli}
+- improve `create.sh`. to start with, write it in OCaml
+- have a look at the TODOs and FIXMEs in the code
+- improve the logging and error messages and make them more coherent
